--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@ else document.observe('dom:loaded', initFlyouts);
 				<div style="height: 0px; overflow: hidden;"></div></div></div>
 
 	</div>
-	<div id="footer">Create a <a target="_top" href="http://www.weebly.com/">free web site</a> with <a target="_top" href="http://www.weebly.com/" title="free web site">Weebly</a></div>
+	<div id="footer">&copy; 2013 Sean Marr</div>
 </div>
 
 </body>
