--- a/env.html
+++ b/env.html
@@ -9,4 +9,5 @@ if (i<max) {
 }
 document.body.style.backgroundImage = 'uploads/1/1/9/7/0/3/11974703/' + images[i];;
 }
+requestAnimationFrame(render);
 </script>
