--- a/env.html
+++ b/env.html
@@ -2,12 +2,13 @@
 <script>
 var images = ['8942192_orig.jpg', '9059583_orig.jpg', '943085_orig.jpg'];
 var max = images.length;
+var i = 0;
 var render = function() {
 i++;
 if (i<max) {
     i = 0;
 }
-document.body.style.backgroundImage = 'uploads/1/1/9/7/0/3/11974703/' + images[i];;
+document.body.style.backgroundImage = 'url(uploads/1/1/9/7/0/3/11974703/' + images[i] + ')';
 }
 requestAnimationFrame(render);
 </script>
