Replace Weebly link w/copyright

--- a/lucasarts.html
+++ b/lucasarts.html
@@ -126,7 +126,7 @@ else document.observe('dom:loaded', initFlyouts);
 <div class="paragraph" style="text-align:left;display:block;"><font size="3">Full Throttle 2 (Unreleased) September 2002 - May 2003</font><br /><font size="3">Jedi Starfighter (PS2, Xbox) October 2001 - December 2001</font><br /><br /><font size="3">Worked as a&nbsp;Technical Artist on the following titles:<br /></font><font size="3">Starfighter (PS2, Xbox, PC) October 2000 - January 2001</font><br /><font size="3">Jar Jar's Journey (Mac, PC) July 1999 - October 1999</font></div></div>
 
 	</div>
-	<div id="footer">Create a <a target="_top" href="http://www.weebly.com/">free web site</a> with <a target="_top" href="http://www.weebly.com/" title="free web site">Weebly</a></div>
+	<div id="footer">&copy; 2013 Sean Marr</div>
 </div>
 
 </body>
