Removing extra </div> entries as it did not achieve desired effect
Removed extra </div> entries as it didn't increase the line spacing as expected and blew up the margins for 2 of the 3 instances where I added it (lines 160 & 201).

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ else document.observe('dom:loaded', initFlyouts);
 
 
 
-</div></div>
+</div>
 
 
 <h2 style="text-align:left;">Dante's Inferno - Electronic Arts February 2010</h2>
@@ -157,7 +157,7 @@ else document.observe('dom:loaded', initFlyouts);
 <div><div id="573477572381120917" align="left" style="width: 100%; overflow-y: hidden;" class="wcustomhtml"><div style="background-color:#000000;width:520px;"><div style="padding:4px;"><iframe src="http://media.mtvnservices.com/embed/mgid:arc:video:gametrailers.com:f97fcb94-584c-4464-adfc-54a444adb002" width="512" height="288" frameborder="0"></iframe></div></div></div>
 
 
-</div></div>
+</div>
 
 <h2 style="text-align:left;">The Godfather II - Electronic Arts Spring 2009</h2>
 <span class='imgPusher' style='float:left;height:0px'></span><span style='position:relative;float:left;z-index:10;;clear:left;margin-top:0px;*margin-top:0px'><a><img class="wsite-image galleryImageBorder" src="uploads/1/1/9/7/11974703/304112.jpg" style="margin-top: 5px; margin-bottom: 10px; margin-left: 0px; margin-right: 10px; border-width:1px;padding:3px;" alt="Picture" /></a><div style="display: block; font-size: 90%; margin-top: -10px; margin-bottom: 10px; text-align: center;"></div></span>
@@ -198,7 +198,7 @@ else document.observe('dom:loaded', initFlyouts);
 
 
 
-</div></div>
+</div>
 
 <h2 style="text-align:left;">The Godfather - Electronic Arts Spring 2006</h2>
 <span class='imgPusher' style='float:left;height:0px'></span><span style='position:relative;float:left;z-index:10;;clear:left;margin-top:0px;*margin-top:0px'><a><img class="wsite-image galleryImageBorder" src="uploads/1/1/9/7/11974703/1336018337.jpg" style="margin-top: 5px; margin-bottom: 10px; margin-left: 0px; margin-right: 10px; border-width:0;" alt="Picture" /></a><div style="display: block; font-size: 90%; margin-top: -10px; margin-bottom: 10px; text-align: center;"></div></span>
