--- a/there-inc.html
+++ b/there-inc.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>There Incorporated - Sean Marr -&nbsp;Digital Artist</title>
+<title>Sean Marr - There Incorporated - Digital Artist</title>
 <meta name='description' content='Social MMO' />
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
