--- a/lucasarts.html
+++ b/lucasarts.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>LucasArts Entertainment - Sean Marr -&nbsp;Digital Artist</title>
+<title>Sean Marr - LucasArts Entertainment - Digital Artist</title>
 <meta name='description' content='Video Game Titles worked on' />
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
