--- a/scenic.html
+++ b/scenic.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Scenic - Sean Marr -&nbsp;Digital Artist</title>
+<title>Sean Marr - Scenic - Digital Artist</title>
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
