--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ else document.observe('dom:loaded', initFlyouts);
 		</div>
 		<div id='wsite-content' class='wsite-elements wsite-not-footer'>
 <div style="text-align:left;"><div style="height: 10px; overflow: hidden;"></div>
-<a class="wsite-button wsite-button-small wsite-button-highlight" href="uploads/1/1/9/7/11974703/sean_marr_resume.doc" >
+<a class="wsite-button wsite-button-small wsite-button-highlight" href="uploads/1/1/9/7/11974703/sean_marr_resume.pdf" >
 <span class="wsite-button-inner">Resume</span>
 </a>
 <div style="height: 10px; overflow: hidden;"></div></div>
